# deep-models-examples

./: .mypy.ini  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
src/: datamodule.py
src/models/: dcgan.py  vae.py
src/models/components/: cnn.py  residual.py
src/models/gan/: datamodule.py  dcgan.py  simple_gan.py
tests/models/: test_dcgan.py
tests/models/components/: test_cnn.py  test_residual.py
tests/models/gan/: test_gan.py
