[tool.poetry]
name = "generative-models-examples"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]
readme = "README.md"
packages = [{include = "generative_models_examples"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
setuptools = "^67.0.0"
torch = "^1.13.1"
pytorch-lightning = "^1.9.0"
torchvision = "^0.14.1"
tensorboard = "^2.11.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
autopep8 = "^2.0.1"
mypy = "^0.991"
jupyterlab = "^3.5.3"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
